test/fails/bad_parsing/bad_function12.lgl
void main() {
    return;
}; // Extra semicolon